--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
         driverClassName: com.mysql.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/renren_fast?useUnicode=true&characterEncoding=UTF-8
-        username: renren
-        password: 123456
+        url: jdbc:mysql://47.104.94.126:3306/scgo_cloud?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+        username: root
+        password: Root1234!
     jackson:
         time-zone: GMT+8
         date-format: yyyy-MM-dd HH:mm:ss
